--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "discord.js": "^11.5.1",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "ffbinaries": "^1.1.4",
         "ffmpeg": "0.0.4",
