--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "start": "node dist/app.js",
         "test": "mocha --exit test/*.test.js",
         "gcp-build": "tsc -p .",
-        "deploy": "gcloud app deploy"
+        "deploy": "gcloud app deploy",
+        "create-env": "printenv > .env"
     },
     "dependencies": {
+        "@google-cloud/storage": "^4.1.3",
         "discord.js": "^11.5.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
