--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,8 @@ steps:
     env:
       - "YOUTUBE_API_KEY=${_YOUTUBE_API_KEY}"
       - "DISCORD_BOT_TOKEN=${_DISCORD_BOT_TOKEN}"
-  - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy"]
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/quickstart-image", "."]
+images:
+  - "gcr.io/$PROJECT_ID/quickstart-image"
 timeout: "1600s"
