--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "node": ">=8.0.0"
     },
     "scripts": {
-        "start": "node dist/app.js",
         "test": "mocha --exit test/*.test.js",
-        "gcp-build": "tsc -p .",
+        "build": "tsc",
+        "start": "tsc -w --preserveWatchOutput",
         "deploy": "gcloud app deploy",
         "create-env": "printenv > .env"
     },
