--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
         "create-env": "printenv > .env"
     },
     "dependencies": {
+        "@discordjs/uws": "^10.149.0",
         "@google-cloud/storage": "^4.1.3",
+        "bufferutil": "^4.0.1",
         "discord.js": "^11.5.1",
         "dotenv": "^8.2.0",
+        "erlpack": "github:discordapp/erlpack",
         "express": "^4.17.1",
         "ffbinaries": "^1.1.4",
         "ffmpeg": "0.0.4",
-        "node-opus": "^0.3.3",
+        "ffmpeg-static": "^4.0.1",
+        "libsodium-wrappers": "^0.7.6",
+        "node-opus": "^0.2.9",
+        "opusscript": "0.0.6",
         "tslint": "^5.20.0",
         "typescript": "^3.6.4",
         "youtube-search": "^1.1.4",
